<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/sign_up"
        android:textColor="#ff6750a4"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="name"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/Gray"
        android:textColorHint="@color/Gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_bg"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="6dp"
        android:paddingEnd="10dp"
        android:paddingBottom="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputName">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:text="@string/gender"
            android:textColor="@color/Gray"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male"
            android:textColor="@color/Gray"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/female"
            android:textColor="@color/Gray"
            android:textSize="18sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/inputPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="phone_number"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/Gray"
        android:textColorHint="@color/Gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/genderRadioGroup"
        app:layout_constraintStart_toStartOf="@+id/genderRadioGroup"
        app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup" />

    <EditText
        android:id="@+id/inputAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="address"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/Gray"
        android:textColorHint="@color/Gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/inputPhoneNumber"
        app:layout_constraintStart_toStartOf="@+id/inputPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/inputPhoneNumber" />

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="username"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/Gray"
        android:textColorHint="@color/Gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/inputAddress"
        app:layout_constraintStart_toStartOf="@+id/inputAddress"
        app:layout_constraintTop_toBottomOf="@+id/inputAddress" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/Gray"
        android:textColorHint="@color/Gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/inputUsername"
        app:layout_constraintStart_toStartOf="@+id/inputUsername"
        app:layout_constraintTop_toBottomOf="@+id/inputUsername" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="150dp"
        android:layout_height="43dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="85dp"
        android:background="@drawable/button_bg"
        android:fontFamily="serif"
        android:text="@string/signup_btn"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/inputPassword"
        app:layout_constraintStart_toStartOf="@+id/inputPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account"
            android:textColor="@color/Gray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/LoginClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_click"
            android:textColor="#FF6750a4"
            android:textSize="22sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="95dp"
        android:layout_height="100dp"
        android:layout_marginBottom="70dp"
        android:contentDescription="@string/eight_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        app:srcCompat="@drawable/eight" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:contentDescription="@string/three_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/three" />

</androidx.constraintlayout.widget.ConstraintLayout>